# EDU-Chunked-RAG-Fact-Checker

./: README.md  docker-compose.yml  pyproject.toml
com/fever/rag/: runner.py
com/fever/rag/chunker/: base_chunker.py  custom_edu_chunker.py  fixed_char_chunker.py  fixed_token_chunker.py  sentence_chunker.py
com/fever/rag/evidence/: __main__.py  vector_db_builder.py
com/fever/rag/generator/: zero_shot_prompting.py
com/fever/rag/models/: BERTWithMLPClassifier.py
com/fever/rag/retriever/: retriever_config.py  retriever_evaluator.py
com/fever/rag/utils/: chunker_helper.py  chunker_stats.py  data_helper.py  dataset_reducer.py  test_claim_retrreival.py  text_cleaner.py  validate-files.py
dataset/: data_exploration.ipynb
resources/MLPbert_grp6_dim_512_256_128_cw0_5_rank_16_alpha_128_ep10_noES/best_model/: README.md  adapter_config.json  chunker_config.json
resources/RAG-pipeline/: SENTENCE_PIECE_FINAL_PIPELINE.ipynb  custom-edu.ipynb
resources/Retreieval/: CHUNKERRUNS_customedus overalp0,1,2_.ipynb  FIXEDTOKEN_FIXEDCHAR_SENTENCE_CHUNKERS.ipynb
